--- a/employeedirectory/src/components/Card/style.css
+++ b/employeedirectory/src/components/Card/style.css
@@ -1,19 +1,38 @@
 .card {
+  background-color: lightskyblue;
+  justify-content: center;
   background-size: cover;
   background-position: center;
   background-clip: content-box;
   border: 6px solid white;
-  height: 400px;
-  width: 400px;
+  height: 350px;
+  width: 350px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   position: relative;
   margin: 0 auto;
   margin-top: 30px;
 }
 
-.card .fa-spinner {
-  font-size: 180px;
-  position: absolute;
-  left: 25%;
-  top: 25%;
+h1 {
+  justify-content: center;
+  position: relative;
+}
+
+h3 {
+  color: midnightblue;
+  justify-content: center;
+  position: relative;
+}
+
+p {
+color: mediumblue;
+justify-content: center;
+position: relative;
+}
+
+img {
+  justify-content: center;
+  position: relative;
+  height: auto;
+  width: auto;
 }
